fixed newsletter index bug and images not showing bug

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -92,7 +92,8 @@
     }
 }
 
-.analytics_wrapper {
+.analytics_wrapper,
+.newsletters {
     max-width: 100%;
     overflow: auto;
     .scrollmenu {
